# DiDA_ATM_XZ

./: CMakeLists.txt  README.md  State.cpp  State.h  damping.cpp  diagnostic.cpp  integrate.cpp  integrate.h  interp.cpp  main.cpp  params.h  print_func.cpp  tendency.cpp
test-case/: Schar_mount.m  Schar_mount_rest.m  Schar_to_phys.m  Schar_to_phys_different_delta_x.m  Unknown_test.fig  flat_channel.m  flat_rest_to_comp.m  gravity_wave.m  linear_mount_H.m  linear_mount_H_to_phys.m  linear_mount_N.m  linear_mount_N_to_phys.m  linear_mount_rest_to_comp.m  unknown_test.m
